<resources>
    <string name="app_name">Fashtrack</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="dashboard">Dashboard</string>
    <string name="sockets">Sockets</string>
    <string name="clients">Clients</string>
    <string name="socket_assign">Socket assign</string>
    <string name="change_password">Change password</string>


    <string name="app_logo">App logo</string>
    <string name="remember_password">Remember password</string>
    <string name="password">Password</string>
    <string name="user_name">User name</string>
    <string name="login">Sign in</string>
    <string name="read_from_qr">Read from QR</string>
    <string name="wifi">Wifi</string>
    <string name="username">Username</string>
    <string name="machine_current">Machine current</string>
    <string name="smart_plug_id">Smart plug ID</string>
    <string name="target_port">Target port</string>
    <string name="target_ip_address">Target IP Address</string>
    <string name="default_gateway">Default gateway</string>
    <string name="subnet_mask">Subnet mask</string>
    <string name="port">Port</string>
    <string name="ip_address">IP Address</string>
    <string name="device">Device</string>
    <string name="table_id">Table ID</string>
    <string name="machine_id">Machine ID</string>
    <string name="update">UPDATE</string>


    <string name="read_from_device">Read from device</string>
    <string name="retry">Retry</string>
    <string name="machine_qr">Machine QR</string>
    <string name="scan_qr">Scan QR</string>
    <string name="device_qr">Device QR</string>
    <string name="add_device">Add Machine</string>
    <string name="configuration">Configuration</string>
    <string name="table_qr">Table QR</string>
    <string name="comments">Comments</string>
    <string name="close">Close</string>
    <string name="alerts">Alerts</string>
    <string name="no_alerts_found">No alerts found…</string>
    <string name="info">Info</string>
    <string name="log_out">Logout</string>
    <string name="user">User</string>
    <string name="devices_on_load">Running</string>
    <string name="live_devices">Powered on</string>
    <string name="total_devices">Total devices</string>
    <string name="_0">0</string>
    <string name="devices">Devices</string>
    <string name="scan">Scan</string>
    <string name="for_table_sap_id">For Table SAP ID:</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="total_clients">Total clients</string>
    <string name="total_unassigned">Total Unassigned</string>
    <string name="total_assigned">Total Assigned</string>
    <string name="errorMessage">Server responded with error code</string>
    <string name="NetworkerrorMessage">Please Check Internet Connection</string>
    <string name="add_from_excel">Add from excel</string>
    <string name="add_using_mac">Add using mac</string>
    <string name="invalid_excel">Smart device details not found in the selected file</string>
    <string name="height">Height</string>
    <string name="width">Width</string>
    <string name="qr_code">QR Code</string>
    <string name="save_location">Save location</string>
    <string name="save">Save</string>
    <string name="enter_height">Enter height</string>
    <string name="enter_width">Enter width</string>
    <string name="no_sockets_found">No Smart device found</string>
    <string name="unassigned">Unassigned</string>
    <string name="assigned">Assigned</string>
    <string name="all">All</string>
    <string name="add_sockets">Add Smart devices</string>
    <string name="serial_no">Serial No.</string>
    <string name="mac_id">Mac ID</string>
    <string name="add_socket">Add Smart device</string>
    <string name="dashboards">Dashboards</string>
    <string name="no_sites_found">No Sites found</string>
    <string name="sign_out">Sign out</string>
    <string name="search_device">Search device</string>
    <string name="ssid">SSID</string>
    <string name="wifi_5g_message">Smart device don\'t support 5G Wifi, please make sure the currently connected Wifi is 2.4G</string>
    <string name="no_wifi_connection">No Wifi connection</string>
    <string name="configuring_message">Smart device is being configured…</string>
    <string name="configure_wifi_change_message">Wifi disconnected or changed</string>
    <string name="configure_result_failed_port">Unable to start commissioning</string>
    <string name="configure_result_failed">Commissioning failed</string>
    <string name="configure_result_success_item">BSSID = %1$s, InetAddress = %2$s</string>
    <string name="configure_result_success">Configure success</string>
    <string name="location_disable_message">Location(GPS) is disable</string>
    <string name="bssid">BSSID</string>
    <string name="site_name">Site name</string>
    <string name="site_id">Site id</string>
    <string name="machine">Machine</string>
    <string name="desk">Desk</string>
    <string name="socket">Socket</string>
    <string name="select_all">Select All</string>
    <string name="generate_amp_save"><![CDATA[Generate & Save]]></string>
    <string name="commissioned">Commissioned</string>
    <string name="running">Running</string>
    <string name="powered_on">Powered On</string>
    <string name="total_machine">Total machines</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="assignment">Assignment</string>
    <string name="stocks">Stocks</string>
    <string name="settings">Settings</string>
    <string name="users">Users</string>
    <string name="user_role">User role</string>
    <string name="decommission">Decommission</string>
    <string name="commission">Commission</string>
    <string name="shift_detail">Shift setting</string>
    <string name="sites">Sites</string>
    <string name="maintenance">Maintenance</string>
    <string name="clock_time_tracking">Clock time tracking</string>
    <string name="work_schedule_tracking">Work schedule tracking</string>
    <string name="asset_tracking">Asset tracking</string>
    <string name="running_time">Running time</string>
    <string name="user_management">User management</string>
    <string name="installation">Installation</string>
    <string name="organization">Organization</string>
    <string name="qr_generation">QR Generation</string>
    <string name="inventory">Inventory</string>
    <string name="ambience">Ambience</string>
    <string name="grace_time">Grace time</string>
    <string name="used">Used</string>
    <string name="unused">Unused</string>
    <string name="qr_code_dimensions">QR Code Dimensions</string>
    <string name="minimum_running_time">Minimum running time</string>
    <string name="punctuality_grace_time">Punctuality grace time</string>
    <string name="events">Events</string>
    <string name="add">Add</string>
    <string name="smart_device">Smart device</string>
    <string name="smart_devices">Smart devices</string>
    <string name="excel_export">Excel export</string>
    <string name="filter_by_client_name">Filter by client name</string>
    <string name="no_data_server">No Data From Server</string>
    <string name="filterNoValue">No Value in Filter! Please Select the Site</string>
    <string name="pageNo">Enter PageNO</string>
    <string name="CrashReportMessage">Sorry! Fashtrack is Crashed, Please Send Us The Crash Report...</string>
    <string name="needlerun">Needle Status Run</string>
    <string name="needleidle">Needle Status Idle</string>
    <string name="needlerunpercentage">Needle Run %</string>
    <string name="needleidlepercentage">Needle Idle</string>
    <string name="punctualitywork">Work sessions</string>
    <string name="punctualitybreak">Break sessions</string>
    <string name="assetstatus">Average Asset Status</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

</resources>
