<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_dash_group"
        android:title="@string/dashboards">
        <menu>
            <group
                android:id="@+id/dashboard_group"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_dash_asset"
                    app:itemTextAppearance="@style/Style_TextView"
                    android:icon="@drawable/ic_asset_nav"
                    android:title="@string/asset_tracking" />
                <item
                    android:id="@+id/nav_dash_workSche"
                    app:itemTextAppearance="@style/Style_TextView"
                    android:icon="@drawable/ic_work_schedule"
                    android:title="@string/work_schedule_tracking" />
                <item
                    android:id="@+id/nav_dash_clockTime"
                    app:itemTextAppearance="@style/Style_TextView"
                    android:icon="@drawable/ic_clock_time"
                    android:title="@string/clock_time_tracking" />
                <item
                    android:id="@+id/nav_dash_maintenance"
                    app:itemTextAppearance="@style/Style_TextView"
                    android:icon="@drawable/ic_maintenance"
                    android:title="@string/maintenance" />
                <item
                    android:id="@+id/nav_dash_ambience"
                    app:itemTextAppearance="@style/Style_TextView"
                    android:icon="@drawable/ic_ambience"
                    android:title="@string/ambience" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/group_user_management"
        android:title="@string/user_management">
        <menu>
            <group
                android:id="@+id/user_group"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_user"
                    app:itemTextAppearance="@style/Style_TextView"
                    android:icon="@drawable/ic_user_nav"
                    android:title="@string/users" />
                <item
                    android:id="@+id/nav_user_role"
                    app:itemTextAppearance="@style/Style_TextView"
                    android:icon="@drawable/ic_role"
                    android:title="@string/user_role" />
                <item
                    android:id="@+id/nav_user_assign"
                    app:itemTextAppearance="@style/Style_TextView"
                    android:icon="@drawable/ic_device_assign"
                    android:title="@string/assignment" />
            </group>
        </menu>
    </item>

    <group
        android:id="@+id/site_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_organization"
            app:itemTextAppearance="@style/Style_TextView"
            android:icon="@drawable/ic_organization"
            android:title="@string/organization" />
        <item
            android:id="@+id/nav_shift"
            app:itemTextAppearance="@style/Style_TextView"
            android:icon="@drawable/ic_shift"
            android:title="@string/shift_detail" />

    </group>

    <group
        android:id="@+id/group_installation"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_installation"
            app:itemTextAppearance="@style/Style_TextView"
            android:icon="@drawable/ic_installation"
            android:title="@string/installation" />

    </group>

    <group
        android:id="@+id/group_inventory"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_inventory"
            app:itemTextAppearance="@style/Style_TextView"
            android:icon="@drawable/ic_storage"
            android:title="@string/inventory" />

    </group>

    <group
        android:id="@+id/group_events"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_events"
            app:itemTextAppearance="@style/Style_TextView"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/events" />

    </group>

    <group
        android:id="@+id/settings_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_generate_qr"
            android:icon="@drawable/ic_qr_black"
            android:title="@string/qr_generation" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
    </group>

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/sign_out" />


</menu>
