<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:clickable="true"
            android:focusable="true"
            android:drawablePadding="10dp"
            android:id="@+id/txt_machine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:drawableTop="@drawable/ic_machine"
            android:gravity="center"
            android:text="@string/machine"
            android:textColor="@color/colorBlack"
            android:textSize="25sp" />

        <TextView
            android:clickable="true"
            android:focusable="true"
            android:drawablePadding="10dp"
            android:id="@+id/txt_desk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_machine"
            android:layout_margin="20dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:drawableTop="@drawable/ic_desk"
            android:gravity="center"
            android:text="@string/desk"
            android:textColor="@color/colorBlack"
            android:textSize="25sp" />

        <TextView
            android:clickable="true"
            android:focusable="true"
            android:drawablePadding="10dp"
            android:id="@+id/txt_socket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_desk"
            android:layout_margin="20dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:drawableTop="@drawable/ic_socketnew"
            android:gravity="center"
            android:text="@string/socket"
            android:textColor="@color/colorBlack"
            android:textSize="25sp" />


    </RelativeLayout>
</layout>