<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <include
            android:id="@+id/progress_circular_device"
            layout="@layout/progress"
            android:visibility="gone" />


        <RelativeLayout
            android:id="@+id/device_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:animateLayoutChanges="true">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cg_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/all"
                    app:checkedIconEnabled="false" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_assigned"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/assigned"
                    app:checkedIconEnabled="false" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_unassigned"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/unassigned"
                    app:checkedIconEnabled="false" />

            </com.google.android.material.chip.ChipGroup>


        </RelativeLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/device_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/device_toolbar">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:id="@+id/emptyState"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/coloWhite"
                    android:clickable="true"
                    android:elevation="10dp"
                    android:focusable="true"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/imgEmptyState"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_socket1" />

                    <TextView
                        android:id="@+id/txtEmptyText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/imgEmptyState"
                        android:layout_margin="20dp"
                        android:gravity="center"
                        android:text="Seems like you haven't added any desks" />
                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_device"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </androidx.recyclerview.widget.RecyclerView>

            </RelativeLayout>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </RelativeLayout>


</layout>
