<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:animateLayoutChanges="true"
        android:layout_height="match_parent">

        <RelativeLayout
            android:animateLayoutChanges="true"
            android:id="@+id/inven_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cg_filter"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/all"
                    app:checkedIconEnabled="false" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_assigned"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/used"
                    app:checkedIconEnabled="false" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_unassigned"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/unused"
                    app:checkedIconEnabled="false" />

            </com.google.android.material.chip.ChipGroup>

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/srl_refresh"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/cg_filter"
                android:layout_above="@id/bottomnav_inventory">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RelativeLayout
                        android:id="@+id/emptyState"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/coloWhite"
                        android:clickable="true"
                        android:elevation="10dp"
                        android:focusable="true"
                        android:visibility="gone">

                        <ImageView
                            android:id="@+id/imgEmptyState"
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/ic_table1" />

                        <TextView
                            android:id="@+id/txtEmptyText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/imgEmptyState"
                            android:layout_margin="20dp"
                            android:gravity="center"
                            android:text="Seems like you haven't added any desks" />
                    </RelativeLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_inven"
                        android:foregroundGravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </RelativeLayout>



            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


            <com.google.android.material.bottomnavigation.BottomNavigationView

                android:id="@+id/bottomnav_inventory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                app:labelVisibilityMode="selected"
                app:menu="@menu/inventory_navigation" />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>